[package]
name = "rust_saw"
version = "0.1.0"
authors = ["Sam Pluta <spluta@gmail.com>"]
edition = "2018"

# Note: header file generation happens in build.rs
[lib]
name = "rust_saw"
# we need to tell the compiler to create static and dynamic libraries
crate-type = ["lib", "staticlib", "cdylib"]    


[build-dependencies]
cbindgen = "0.24.5"

[dependencies]
libc = "0.2.147"